exports[`HeaderIcon should render 1`] = `
<View
  style={
    Array [
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      },
      Object {
        "backgroundColor": "#003035"
      }
    ]
  }>
  <View
    onPress={[Function noop]}
    style={
      Array [
        Object {
          "position": "absolute",
          "top": 24
        },
        Object {}
      ]
    }>
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 24,
            "width": 24
          },
          Object {}
        ]
      } />
  </View>
</View>
`;

exports[`HeaderIcon should support style overriding 1`] = `
<View
  style={
    Array [
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      },
      Object {
        "backgroundColor": "#003035"
      }
    ]
  }>
  <View
    onPress={[Function noop]}
    style={
      Array [
        Object {
          "position": "absolute",
          "top": 24
        },
        Object {
          "left": 48
        }
      ]
    }>
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 24,
            "width": 24
          },
          Object {}
        ]
      } />
  </View>
</View>
`;
